--- a/basics.ipynb
+++ b/basics.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "d5a5e183",
    "metadata": {},
    "outputs": [
@@ -61,10 +61,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', 'a', 'l', 'o']\n",
-      "Count of a is 2\n",
-      "Count of o is 1\n",
-      "Count of l is 1\n"
+      "['i', 'i', 'i', 'i', 'm', 'p', 's', 's', 's']\n",
+      "Count of i is 4\n",
+      "Count of p is 1\n",
+      "Count of m is 1\n",
+      "Count of s is 3\n"
      ]
     }
    ],
@@ -103,13 +104,9 @@
       "uphill\n",
       "uphill\n",
       "uphill\n",
-      "uphill\n",
       "constant\n",
       "constant\n",
-      "downhill\n",
-      "downhill\n",
-      "downhill\n",
-      "Yes, it is a hill number\n"
+      "No, It is not a hill number\n"
      ]
     }
    ],
@@ -213,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "7cc2dc3e",
    "metadata": {},
    "outputs": [
@@ -221,17 +218,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes it is an anagram\n"
+      "None\n",
+      "No, it is not an anagram\n"
      ]
     }
    ],
    "source": [
-    "def anagram_check(string):\n",
-    "    if len(list(string)) == len(list(set(string))):\n",
+    "def anagram_check(string1, string2):\n",
+    "    list(string2).sort()\n",
+    "    if list(string1) == list(string2).sort():\n",
     "        return \"Yes, it is an anagram\"\n",
     "    else:\n",
     "        return \"No, it is not an anagram\"\n",
-    "print(anagram_check(input(\"Enter the number: \")))"
+    "print(anagram_check(input(\"Enter the first string: \"), input(\"Enter the second string: \")))"
    ]
   },
   {
@@ -244,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "5351773f",
    "metadata": {},
    "outputs": [
@@ -252,13 +251,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 1 2 3 5 8 13 21 34 55\n"
+      "0 1 1 2 3 5 8 13 21 34\n"
      ]
     }
    ],
    "source": [
     "def fibonacci(a, b, n):\n",
-    "    if n==0:\n",
+    "    if n==1:\n",
     "        return a\n",
     "    else:\n",
     "        n-=1\n",
@@ -317,11 +316,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e6f43286",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "ADDITIONAL: \n",
+    "\n",
+    "Bubble sort and selection sort using factorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41e223b5",
+   "metadata": {},
    "source": []
   }
  ],
